# ROOT_macros_tutorials_and_other_stuff

./: CMakeLists.txt  R&D clipboard quarantine.C  README.md  TODO  angleplots.C  anothertest.C  cresis_voltage_v_time.py  kmacro.C  multi.cc  plotmacro.C  powerfreq.C  regularmacro.C  scatterFromCascadeMultipleoriginal.cc  scattersumpowfreq.C  showerAxisAngles.C  smallmacro.C  start backup working pre loop.cc  start.cc  sumpowfreq.C  test.C  theanglemacro.C
Backup of working files/: Dylan's Notebook Working.ipynb  rootlogon.C  scatterFromCascadeMultiple.cc
Backup of working files/bash scripts working on Ubuntu/: compile.sh  run.sh
Backup of working files/bash scripts working on WSL/: compile.sh  run.sh
Jupyter Notebooks/: Dec22 scatterplot notebook.ipynb  Dylan's Notebook Working.ipynb  Macro R&D.ipynb  Notebook that actually works 22Nov22.ipynb  PowerFrq macro dev-Copy3.ipynb  PowerFrq macro dev.ipynb  PowerSum.ipynb  Simple TH2D manipulation - not RS dependant.ipynb  Simple TH2D manipulation.ipynb  Untitled.ipynb  Untitled2.ipynb
Jupyter Notebooks/.ipynb_checkpoints/: Dec22 scatterplot notebook-checkpoint.ipynb  Notebook that actually works 22Nov22-checkpoint.ipynb
Meeting stuff/: PowerFrq macro dev-Copy1.ipynb  macro in dev.ipynb
ROOT Tutorials/: axistut.C  data.root  data.txt  fileopentut.C  filesavetut.C  fitting.C  functut.C  graphtut.C  histtut.C  treetut.C  tutorial_TFile.root
RadioScatter Presentation/: Neutrino Spectrum and Detectors.mdp  RS Quadslide Oct 2021.pptx
